index.css
*{
    margin:0;
    padding: 0;
    font-family: 'poppins' , 'san serif';
    box-sizing: border-box;
    
}
h1,
h2,
h3,
h4,
h5,
h6 {
    margin: 0;
    padding: 0;
}

.hero{
    background: #1d2026;
    min-height: 100vh;
    width: 100%;
    color: #fff;
    position: relative;
}

nav{
    display: flex;
    align-items: center;
    padding: 20px 8%;
}

ul a{
    text-decoration: none;
    color: #fff;
   

}
ul{
    display: flex;
    justify-content: space-between;
    margin-left: 400px;

}
ul li{
    justify-content: space-between;
    padding: 10px 40px;
    list-style: none;
}

.menu{
    width: 25px;
    margin-right: 20px;
}

.logo{
    width:140px;
}
.lamp{
    width:250px;
    margin-left: 300px;
    margin-top: -100px;
}
.info{
    display: flex;
    
    
}
.texth1{
font-family: 'DM Sans', sans-serif;
padding: 100px , 100px;
margin-left: 300px;
margin-top: 150px;

}
span{
    line-height: 10px;
}

